--- a/render.yaml
+++ b/render.yaml
@@ -12,9 +12,9 @@ services:
         value: production
       - key: ELEVENLABS_KEY
         sync: false
-      - key: ANTHROPIC_KEY
+      - key: OPENAI_KEY
         sync: false  
-      - key: ANTHROPIC_API_KEY
+      - key: OPENAI_API_KEY
         sync: false
       - key: SUPABASE_URL
         sync: false
